# Tweetoscope

./: CMakeLists.txt  README.md  requirements.txt
Dockerfiles/: Dockerfile.base  Dockerfile.collector  Dockerfile.dashboard  Dockerfile.estimator  Dockerfile.generator  Dockerfile.learner  Dockerfile.monitor  Dockerfile.predictor  Dockerfile.prometheus
collector/: CMakeLists.txt
collector/src/: CMakeLists.txt  Collector.cpp  Collector.hpp  tweet-collector.cpp  tweetoscopeCollectorParams.hpp
collector/tests/: CMakeLists.txt  collector-tests.cpp
dashboard/src/: tweet-dashboard.py
deployement/: middleware-deployement.yml  services-deployement.yml
doc/: Doxyfile.in
estimator/src/: tweet-estimator.py
generator/: CMakeLists.txt
generator/src/: CMakeLists.txt  tweetoscopeGenerator.hpp
grafana/: dashboard.json  prometheus.yml  rules.yml
kafka/: server.properties
learner/src/: tweet-learner.py
logger/: requirements.txt
monitor/src/: tweet-monitor.py
params/: params.config  params_collector.config  params_py.config
predictor/src/: tweet-predictor.py
